--- a/admin/src/fontello/demo.html
+++ b/admin/src/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?28591664');
-      src: url('./font/fontello.eot?28591664#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?28591664') format('woff'),
-           url('./font/fontello.ttf?28591664') format('truetype'),
-           url('./font/fontello.svg?28591664#fontello') format('svg');
+      src: url('./font/fontello.eot?15643000');
+      src: url('./font/fontello.eot?15643000#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?15643000') format('woff'),
+           url('./font/fontello.ttf?15643000') format('truetype'),
+           url('./font/fontello.svg?15643000#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -349,6 +349,9 @@ body {
         <div class="the-icons span3" title="Code: 0xe820"><i class="demo-icon icon-emo-sleep">&#xe820;</i> <span class="i-name">icon-emo-sleep</span><span class="i-code">0xe820</span></div>
         <div class="the-icons span3" title="Code: 0xe821"><i class="demo-icon icon-right-open-mini">&#xe821;</i> <span class="i-name">icon-right-open-mini</span><span class="i-code">0xe821</span></div>
         <div class="the-icons span3" title="Code: 0xe822"><i class="demo-icon icon-left-open-mini">&#xe822;</i> <span class="i-name">icon-left-open-mini</span><span class="i-code">0xe822</span></div>
+        <div class="the-icons span3" title="Code: 0xe823"><i class="demo-icon icon-cog">&#xe823;</i> <span class="i-name">icon-cog</span><span class="i-code">0xe823</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
       </div>
     </div>
