--- a/admin/src/fontello/demo.html
+++ b/admin/src/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?15643000');
-      src: url('./font/fontello.eot?15643000#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?15643000') format('woff'),
-           url('./font/fontello.ttf?15643000') format('truetype'),
-           url('./font/fontello.svg?15643000#fontello') format('svg');
+      src: url('./font/fontello.eot?17558289');
+      src: url('./font/fontello.eot?17558289#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?17558289') format('woff'),
+           url('./font/fontello.ttf?17558289') format('truetype'),
+           url('./font/fontello.svg?17558289#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -352,6 +352,7 @@ body {
         <div class="the-icons span3" title="Code: 0xe823"><i class="demo-icon icon-cog">&#xe823;</i> <span class="i-name">icon-cog</span><span class="i-code">0xe823</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe824"><i class="demo-icon icon-monitor">&#xe824;</i> <span class="i-name">icon-monitor</span><span class="i-code">0xe824</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
       </div>
     </div>
