--- a/frontend/static/fontello/demo.html
+++ b/frontend/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?85287752');
-      src: url('./font/fontello.eot?85287752#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?85287752') format('woff'),
-           url('./font/fontello.ttf?85287752') format('truetype'),
-           url('./font/fontello.svg?85287752#fontello') format('svg');
+      src: url('./font/fontello.eot?61143280');
+      src: url('./font/fontello.eot?61143280#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?61143280') format('woff'),
+           url('./font/fontello.ttf?61143280') format('truetype'),
+           url('./font/fontello.svg?61143280#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -307,9 +307,10 @@ body {
         <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-mail">&#xe804;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe804</span></div>
         <div class="the-icons span3" title="Code: 0xe805"><i class="demo-icon icon-thumbs-up">&#xe805;</i> <span class="i-name">icon-thumbs-up</span><span class="i-code">0xe805</span></div>
         <div class="the-icons span3" title="Code: 0xe806"><i class="demo-icon icon-home">&#xe806;</i> <span class="i-name">icon-home</span><span class="i-code">0xe806</span></div>
-        <div class="the-icons span3" title="Code: 0xf300"><i class="demo-icon icon-github">&#xf300;</i> <span class="i-name">icon-github</span><span class="i-code">0xf300</span></div>
+        <div class="the-icons span3" title="Code: 0xe839"><i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf300"><i class="demo-icon icon-github">&#xf300;</i> <span class="i-name">icon-github</span><span class="i-code">0xf300</span></div>
         <div class="the-icons span3" title="Code: 0xf309"><i class="demo-icon icon-twitter">&#xf309;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf309</span></div>
         <div class="the-icons span3" title="Code: 0xf318"><i class="demo-icon icon-linkedin">&#xf318;</i> <span class="i-name">icon-linkedin</span><span class="i-code">0xf318</span></div>
       </div>
