🚧 [ADMIN] ajout de la page des inscrits à la newsletter alerte

--- a/admin/src/fontello/demo.html
+++ b/admin/src/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?17558289');
-      src: url('./font/fontello.eot?17558289#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?17558289') format('woff'),
-           url('./font/fontello.ttf?17558289') format('truetype'),
-           url('./font/fontello.svg?17558289#fontello') format('svg');
+      src: url('./font/fontello.eot?67059623');
+      src: url('./font/fontello.eot?67059623#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?67059623') format('woff'),
+           url('./font/fontello.ttf?67059623') format('truetype'),
+           url('./font/fontello.svg?67059623#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -353,6 +353,7 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe824"><i class="demo-icon icon-monitor">&#xe824;</i> <span class="i-name">icon-monitor</span><span class="i-code">0xe824</span></div>
+        <div class="the-icons span3" title="Code: 0xe825"><i class="demo-icon icon-mail">&#xe825;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe825</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
       </div>
     </div>
