--- a/admin/src/static/fontello/demo.html
+++ b/admin/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?15622791');
-      src: url('./font/fontello.eot?15622791#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?15622791') format('woff'),
-           url('./font/fontello.ttf?15622791') format('truetype'),
-           url('./font/fontello.svg?15622791#fontello') format('svg');
+      src: url('./font/fontello.eot?14629249');
+      src: url('./font/fontello.eot?14629249#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?14629249') format('woff'),
+           url('./font/fontello.ttf?14629249') format('truetype'),
+           url('./font/fontello.svg?14629249#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -354,6 +354,7 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe824"><i class="demo-icon icon-monitor">&#xe824;</i> <span class="i-name">icon-monitor</span><span class="i-code">0xe824</span></div>
         <div class="the-icons span3" title="Code: 0xe825"><i class="demo-icon icon-mail">&#xe825;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe825</span></div>
+        <div class="the-icons span3" title="Code: 0xe826"><i class="demo-icon icon-feather">&#xe826;</i> <span class="i-name">icon-feather</span><span class="i-code">0xe826</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
       </div>
     </div>
