--- a/admin/src/static/fontello/demo.html
+++ b/admin/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?14629249');
-      src: url('./font/fontello.eot?14629249#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?14629249') format('woff'),
-           url('./font/fontello.ttf?14629249') format('truetype'),
-           url('./font/fontello.svg?14629249#fontello') format('svg');
+      src: url('./font/fontello.eot?59101786');
+      src: url('./font/fontello.eot?59101786#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?59101786') format('woff'),
+           url('./font/fontello.ttf?59101786') format('truetype'),
+           url('./font/fontello.svg?59101786#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -355,6 +355,10 @@ body {
         <div class="the-icons span3" title="Code: 0xe824"><i class="demo-icon icon-monitor">&#xe824;</i> <span class="i-name">icon-monitor</span><span class="i-code">0xe824</span></div>
         <div class="the-icons span3" title="Code: 0xe825"><i class="demo-icon icon-mail">&#xe825;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe825</span></div>
         <div class="the-icons span3" title="Code: 0xe826"><i class="demo-icon icon-feather">&#xe826;</i> <span class="i-name">icon-feather</span><span class="i-code">0xe826</span></div>
+        <div class="the-icons span3" title="Code: 0xe827"><i class="demo-icon icon-code">&#xe827;</i> <span class="i-name">icon-code</span><span class="i-code">0xe827</span></div>
+      </div>
+      <div class="row">
+        <div class="the-icons span3" title="Code: 0xe828"><i class="demo-icon icon-eye">&#xe828;</i> <span class="i-name">icon-eye</span><span class="i-code">0xe828</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
       </div>
     </div>
