🚧 [FRONTEND] ajout des emails mailto masquage pour robots et bouton copie clipboard

--- a/frontend/static/fontello/demo.html
+++ b/frontend/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?33729376');
-      src: url('./font/fontello.eot?33729376#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?33729376') format('woff'),
-           url('./font/fontello.ttf?33729376') format('truetype'),
-           url('./font/fontello.svg?33729376#fontello') format('svg');
+      src: url('./font/fontello.eot?45529860');
+      src: url('./font/fontello.eot?45529860#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?45529860') format('woff'),
+           url('./font/fontello.ttf?45529860') format('truetype'),
+           url('./font/fontello.svg?45529860#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -310,9 +310,12 @@ body {
         <div class="the-icons span3" title="Code: 0xe807"><i class="demo-icon icon-cancel">&#xe807;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe807</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe809"><i class="demo-icon icon-docs">&#xe809;</i> <span class="i-name">icon-docs</span><span class="i-code">0xe809</span></div>
         <div class="the-icons span3" title="Code: 0xe839"><i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span></div>
         <div class="the-icons span3" title="Code: 0xf300"><i class="demo-icon icon-github">&#xf300;</i> <span class="i-name">icon-github</span><span class="i-code">0xf300</span></div>
         <div class="the-icons span3" title="Code: 0xf309"><i class="demo-icon icon-twitter">&#xf309;</i> <span class="i-name">icon-twitter</span><span class="i-code">0xf309</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xf318"><i class="demo-icon icon-linkedin">&#xf318;</i> <span class="i-name">icon-linkedin</span><span class="i-code">0xf318</span></div>
       </div>
     </div>
