--- a/admin/src/static/fontello/demo.html
+++ b/admin/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?81403126');
-      src: url('./font/fontello.eot?81403126#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?81403126') format('woff'),
-           url('./font/fontello.ttf?81403126') format('truetype'),
-           url('./font/fontello.svg?81403126#fontello') format('svg');
+      src: url('./font/fontello.eot?36658654');
+      src: url('./font/fontello.eot?36658654#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?36658654') format('woff'),
+           url('./font/fontello.ttf?36658654') format('truetype'),
+           url('./font/fontello.svg?36658654#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -360,6 +360,7 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe828"><i class="demo-icon icon-eye">&#xe828;</i> <span class="i-name">icon-eye</span><span class="i-code">0xe828</span></div>
         <div class="the-icons span3" title="Code: 0xe829"><i class="demo-icon icon-clipboard">&#xe829;</i> <span class="i-name">icon-clipboard</span><span class="i-code">0xe829</span></div>
+        <div class="the-icons span3" title="Code: 0xe82a"><i class="demo-icon icon-list">&#xe82a;</i> <span class="i-name">icon-list</span><span class="i-code">0xe82a</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
       </div>
     </div>
