--- a/widget/public/index.html
+++ b/widget/public/index.html
@@ -14,8 +14,8 @@
       href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon"
       href="%PUBLIC_URL%/favicon.ico?v=beta.gouv.fr">
-    <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" />
+      <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
