--- a/widget/src/static/fontello/demo.html
+++ b/widget/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?50757788');
-      src: url('./font/fontello.eot?50757788#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?50757788') format('woff'),
-           url('./font/fontello.ttf?50757788') format('truetype'),
-           url('./font/fontello.svg?50757788#fontello') format('svg');
+      src: url('./font/fontello.eot?78238403');
+      src: url('./font/fontello.eot?78238403#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?78238403') format('woff'),
+           url('./font/fontello.ttf?78238403') format('truetype'),
+           url('./font/fontello.svg?78238403#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -318,7 +318,10 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe80c"><i class="demo-icon icon-cancel">&#xe80c;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe80c</span></div>
         <div class="the-icons span3" title="Code: 0xe80d"><i class="demo-icon icon-map">&#xe80d;</i> <span class="i-name">icon-map</span><span class="i-code">0xe80d</span></div>
+        <div class="the-icons span3" title="Code: 0xe80e"><i class="demo-icon icon-location">&#xe80e;</i> <span class="i-name">icon-location</span><span class="i-code">0xe80e</span></div>
         <div class="the-icons span3" title="Code: 0xe839"><i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span></div>
+      </div>
+      <div class="row">
         <div class="the-icons span3" title="Code: 0xe847"><i class="demo-icon icon-marquee">&#xe847;</i> <span class="i-name">icon-marquee</span><span class="i-code">0xe847</span></div>
       </div>
     </div>
