--- a/widget/src/static/fontello/demo.html
+++ b/widget/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?78238403');
-      src: url('./font/fontello.eot?78238403#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?78238403') format('woff'),
-           url('./font/fontello.ttf?78238403') format('truetype'),
-           url('./font/fontello.svg?78238403#fontello') format('svg');
+      src: url('./font/fontello.eot?70755894');
+      src: url('./font/fontello.eot?70755894#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?70755894') format('woff'),
+           url('./font/fontello.ttf?70755894') format('truetype'),
+           url('./font/fontello.svg?70755894#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -319,9 +319,11 @@ body {
         <div class="the-icons span3" title="Code: 0xe80c"><i class="demo-icon icon-cancel">&#xe80c;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe80c</span></div>
         <div class="the-icons span3" title="Code: 0xe80d"><i class="demo-icon icon-map">&#xe80d;</i> <span class="i-name">icon-map</span><span class="i-code">0xe80d</span></div>
         <div class="the-icons span3" title="Code: 0xe80e"><i class="demo-icon icon-location">&#xe80e;</i> <span class="i-name">icon-location</span><span class="i-code">0xe80e</span></div>
-        <div class="the-icons span3" title="Code: 0xe839"><i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span></div>
+        <div class="the-icons span3" title="Code: 0xe80f"><i class="demo-icon icon-reply">&#xe80f;</i> <span class="i-name">icon-reply</span><span class="i-code">0xe80f</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xe810"><i class="demo-icon icon-check">&#xe810;</i> <span class="i-name">icon-check</span><span class="i-code">0xe810</span></div>
+        <div class="the-icons span3" title="Code: 0xe839"><i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span></div>
         <div class="the-icons span3" title="Code: 0xe847"><i class="demo-icon icon-marquee">&#xe847;</i> <span class="i-name">icon-marquee</span><span class="i-code">0xe847</span></div>
       </div>
     </div>
