--- a/widget/src/static/fontello/demo.html
+++ b/widget/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?70755894');
-      src: url('./font/fontello.eot?70755894#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?70755894') format('woff'),
-           url('./font/fontello.ttf?70755894') format('truetype'),
-           url('./font/fontello.svg?70755894#fontello') format('svg');
+      src: url('./font/fontello.eot?9475676');
+      src: url('./font/fontello.eot?9475676#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?9475676') format('woff'),
+           url('./font/fontello.ttf?9475676') format('truetype'),
+           url('./font/fontello.svg?9475676#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -323,6 +323,7 @@ body {
       </div>
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe810"><i class="demo-icon icon-check">&#xe810;</i> <span class="i-name">icon-check</span><span class="i-code">0xe810</span></div>
+        <div class="the-icons span3" title="Code: 0xe811"><i class="demo-icon icon-emo-unhappy">&#xe811;</i> <span class="i-name">icon-emo-unhappy</span><span class="i-code">0xe811</span></div>
         <div class="the-icons span3" title="Code: 0xe839"><i class="demo-icon icon-spin6 animate-spin">&#xe839;</i> <span class="i-name">icon-spin6</span><span class="i-code">0xe839</span></div>
         <div class="the-icons span3" title="Code: 0xe847"><i class="demo-icon icon-marquee">&#xe847;</i> <span class="i-name">icon-marquee</span><span class="i-code">0xe847</span></div>
       </div>
