--- a/widget/public/index.html
+++ b/widget/public/index.html
@@ -6,6 +6,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color"
       content="#000000">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -14,8 +16,8 @@
       href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon"
       href="%PUBLIC_URL%/favicon.ico?v=beta.gouv.fr">
-      <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i" />
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
