💅 [ADMIN] update des icones des pages + ajout du bouton collapse des colonne de pages

--- a/admin/src/static/fontello/demo.html
+++ b/admin/src/static/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?96914794');
-      src: url('./font/fontello.eot?96914794#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?96914794') format('woff'),
-           url('./font/fontello.ttf?96914794') format('truetype'),
-           url('./font/fontello.svg?96914794#fontello') format('svg');
+      src: url('./font/fontello.eot?88558585');
+      src: url('./font/fontello.eot?88558585#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?88558585') format('woff'),
+           url('./font/fontello.ttf?88558585') format('truetype'),
+           url('./font/fontello.svg?88558585#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -307,59 +307,59 @@ body {
         <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-floppy">&#xe804;</i> <span class="i-name">icon-floppy</span><span class="i-code">0xe804</span></div>
         <div class="the-icons span3" title="Code: 0xe805"><i class="demo-icon icon-users">&#xe805;</i> <span class="i-name">icon-users</span><span class="i-code">0xe805</span></div>
         <div class="the-icons span3" title="Code: 0xe806"><i class="demo-icon icon-user-add">&#xe806;</i> <span class="i-name">icon-user-add</span><span class="i-code">0xe806</span></div>
-        <div class="the-icons span3" title="Code: 0xe807"><i class="demo-icon icon-globe">&#xe807;</i> <span class="i-name">icon-globe</span><span class="i-code">0xe807</span></div>
+        <div class="the-icons span3" title="Code: 0xe807"><i class="demo-icon icon-right-dir">&#xe807;</i> <span class="i-name">icon-right-dir</span><span class="i-code">0xe807</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe808"><i class="demo-icon icon-light-up">&#xe808;</i> <span class="i-name">icon-light-up</span><span class="i-code">0xe808</span></div>
         <div class="the-icons span3" title="Code: 0xe809"><i class="demo-icon icon-attention">&#xe809;</i> <span class="i-name">icon-attention</span><span class="i-code">0xe809</span></div>
         <div class="the-icons span3" title="Code: 0xe80a"><i class="demo-icon icon-plus">&#xe80a;</i> <span class="i-name">icon-plus</span><span class="i-code">0xe80a</span></div>
         <div class="the-icons span3" title="Code: 0xe80b"><i class="demo-icon icon-cancel-circled">&#xe80b;</i> <span class="i-name">icon-cancel-circled</span><span class="i-code">0xe80b</span></div>
+        <div class="the-icons span3" title="Code: 0xe80c"><i class="demo-icon icon-plus-circled">&#xe80c;</i> <span class="i-name">icon-plus-circled</span><span class="i-code">0xe80c</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe80c"><i class="demo-icon icon-plus-circled">&#xe80c;</i> <span class="i-name">icon-plus-circled</span><span class="i-code">0xe80c</span></div>
         <div class="the-icons span3" title="Code: 0xe80d"><i class="demo-icon icon-cancel">&#xe80d;</i> <span class="i-name">icon-cancel</span><span class="i-code">0xe80d</span></div>
         <div class="the-icons span3" title="Code: 0xe80e"><i class="demo-icon icon-check">&#xe80e;</i> <span class="i-name">icon-check</span><span class="i-code">0xe80e</span></div>
         <div class="the-icons span3" title="Code: 0xe80f"><i class="demo-icon icon-info-circled">&#xe80f;</i> <span class="i-name">icon-info-circled</span><span class="i-code">0xe80f</span></div>
+        <div class="the-icons span3" title="Code: 0xe810"><i class="demo-icon icon-network">&#xe810;</i> <span class="i-name">icon-network</span><span class="i-code">0xe810</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe810"><i class="demo-icon icon-network">&#xe810;</i> <span class="i-name">icon-network</span><span class="i-code">0xe810</span></div>
         <div class="the-icons span3" title="Code: 0xe812"><i class="demo-icon icon-logout">&#xe812;</i> <span class="i-name">icon-logout</span><span class="i-code">0xe812</span></div>
         <div class="the-icons span3" title="Code: 0xe813"><i class="demo-icon icon-alert">&#xe813;</i> <span class="i-name">icon-alert</span><span class="i-code">0xe813</span></div>
         <div class="the-icons span3" title="Code: 0xe814"><i class="demo-icon icon-database">&#xe814;</i> <span class="i-name">icon-database</span><span class="i-code">0xe814</span></div>
+        <div class="the-icons span3" title="Code: 0xe815"><i class="demo-icon icon-clone">&#xe815;</i> <span class="i-name">icon-clone</span><span class="i-code">0xe815</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe815"><i class="demo-icon icon-clone">&#xe815;</i> <span class="i-name">icon-clone</span><span class="i-code">0xe815</span></div>
         <div class="the-icons span3" title="Code: 0xe816"><i class="demo-icon icon-map">&#xe816;</i> <span class="i-name">icon-map</span><span class="i-code">0xe816</span></div>
         <div class="the-icons span3" title="Code: 0xe817"><i class="demo-icon icon-down-open-mini">&#xe817;</i> <span class="i-name">icon-down-open-mini</span><span class="i-code">0xe817</span></div>
         <div class="the-icons span3" title="Code: 0xe818"><i class="demo-icon icon-up-open-mini">&#xe818;</i> <span class="i-name">icon-up-open-mini</span><span class="i-code">0xe818</span></div>
+        <div class="the-icons span3" title="Code: 0xe819"><i class="demo-icon icon-emo-unhappy">&#xe819;</i> <span class="i-name">icon-emo-unhappy</span><span class="i-code">0xe819</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe819"><i class="demo-icon icon-emo-unhappy">&#xe819;</i> <span class="i-name">icon-emo-unhappy</span><span class="i-code">0xe819</span></div>
         <div class="the-icons span3" title="Code: 0xe81a"><i class="demo-icon icon-emo-displeased">&#xe81a;</i> <span class="i-name">icon-emo-displeased</span><span class="i-code">0xe81a</span></div>
         <div class="the-icons span3" title="Code: 0xe81b"><i class="demo-icon icon-emo-grin">&#xe81b;</i> <span class="i-name">icon-emo-grin</span><span class="i-code">0xe81b</span></div>
         <div class="the-icons span3" title="Code: 0xe81c"><i class="demo-icon icon-emo-thumbsup">&#xe81c;</i> <span class="i-name">icon-emo-thumbsup</span><span class="i-code">0xe81c</span></div>
+        <div class="the-icons span3" title="Code: 0xe81d"><i class="demo-icon icon-emo-surprised">&#xe81d;</i> <span class="i-name">icon-emo-surprised</span><span class="i-code">0xe81d</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe81d"><i class="demo-icon icon-emo-surprised">&#xe81d;</i> <span class="i-name">icon-emo-surprised</span><span class="i-code">0xe81d</span></div>
         <div class="the-icons span3" title="Code: 0xe81e"><i class="demo-icon icon-emo-coffee">&#xe81e;</i> <span class="i-name">icon-emo-coffee</span><span class="i-code">0xe81e</span></div>
         <div class="the-icons span3" title="Code: 0xe81f"><i class="demo-icon icon-emo-happy">&#xe81f;</i> <span class="i-name">icon-emo-happy</span><span class="i-code">0xe81f</span></div>
         <div class="the-icons span3" title="Code: 0xe820"><i class="demo-icon icon-emo-sleep">&#xe820;</i> <span class="i-name">icon-emo-sleep</span><span class="i-code">0xe820</span></div>
+        <div class="the-icons span3" title="Code: 0xe821"><i class="demo-icon icon-right-open-mini">&#xe821;</i> <span class="i-name">icon-right-open-mini</span><span class="i-code">0xe821</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe821"><i class="demo-icon icon-right-open-mini">&#xe821;</i> <span class="i-name">icon-right-open-mini</span><span class="i-code">0xe821</span></div>
         <div class="the-icons span3" title="Code: 0xe822"><i class="demo-icon icon-left-open-mini">&#xe822;</i> <span class="i-name">icon-left-open-mini</span><span class="i-code">0xe822</span></div>
         <div class="the-icons span3" title="Code: 0xe823"><i class="demo-icon icon-cog">&#xe823;</i> <span class="i-name">icon-cog</span><span class="i-code">0xe823</span></div>
         <div class="the-icons span3" title="Code: 0xe824"><i class="demo-icon icon-monitor">&#xe824;</i> <span class="i-name">icon-monitor</span><span class="i-code">0xe824</span></div>
+        <div class="the-icons span3" title="Code: 0xe825"><i class="demo-icon icon-mail">&#xe825;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe825</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe825"><i class="demo-icon icon-mail">&#xe825;</i> <span class="i-name">icon-mail</span><span class="i-code">0xe825</span></div>
         <div class="the-icons span3" title="Code: 0xe826"><i class="demo-icon icon-feather">&#xe826;</i> <span class="i-name">icon-feather</span><span class="i-code">0xe826</span></div>
         <div class="the-icons span3" title="Code: 0xe827"><i class="demo-icon icon-code">&#xe827;</i> <span class="i-name">icon-code</span><span class="i-code">0xe827</span></div>
-        <div class="the-icons span3" title="Code: 0xe828"><i class="demo-icon icon-eye">&#xe828;</i> <span class="i-name">icon-eye</span><span class="i-code">0xe828</span></div>
+        <div class="the-icons span3" title="Code: 0xe828"><i class="demo-icon icon-left-dir">&#xe828;</i> <span class="i-name">icon-left-dir</span><span class="i-code">0xe828</span></div>
+        <div class="the-icons span3" title="Code: 0xe829"><i class="demo-icon icon-clipboard">&#xe829;</i> <span class="i-name">icon-clipboard</span><span class="i-code">0xe829</span></div>
       </div>
       <div class="row">
-        <div class="the-icons span3" title="Code: 0xe829"><i class="demo-icon icon-clipboard">&#xe829;</i> <span class="i-name">icon-clipboard</span><span class="i-code">0xe829</span></div>
         <div class="the-icons span3" title="Code: 0xe82a"><i class="demo-icon icon-list">&#xe82a;</i> <span class="i-name">icon-list</span><span class="i-code">0xe82a</span></div>
+        <div class="the-icons span3" title="Code: 0xe82c"><i class="demo-icon icon-help">&#xe82c;</i> <span class="i-name">icon-help</span><span class="i-code">0xe82c</span></div>
         <div class="the-icons span3" title="Code: 0xe832"><i class="demo-icon icon-spin3 animate-spin">&#xe832;</i> <span class="i-name">icon-spin3</span><span class="i-code">0xe832</span></div>
         <div class="the-icons span3" title="Code: 0xe83c"><i class="demo-icon icon-town-hall">&#xe83c;</i> <span class="i-name">icon-town-hall</span><span class="i-code">0xe83c</span></div>
       </div>
